--- a/static/index.html
+++ b/static/index.html
@@ -79,9 +79,9 @@
           },
           body: JSON.stringify({
             NAME: document.getElementById("txt_name_update").value,
-            AGE: document.getElementById("txt_age_update").value,
+            AGE: parseFloat(document.getElementById("txt_age_update").value),
             ADDRESS: document.getElementById("txt_address_update").value,
-            SALARY: document.getElementById("txt_salary_update").value,
+            SALARY: parseFloat(document.getElementById("txt_salary_update").value),
           }),
         }).then((response) => {
           console.log(response);
